--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -9,7 +9,8 @@ gem 'puma'<%= gemfile_requirement('puma') %>
 gem 'rails', '<%= Rails.version %>'
 gem 'sass-rails'<%= gemfile_requirement('sass-rails') %>
 gem 'rails-i18n'
-gem 'bootsnap', '>= 1.1.0', require: false
+# issue with bootsnap, breaking webpacker:install
+# gem 'bootsnap', '>= 1.1.0', require: false
 
 
 # JS
