--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -42,6 +42,7 @@ group :development, :test do
 end
 
 group :development do
+  gem 'spring'
   gem 'annotate'
   gem 'awesome_print'
   gem 'bullet'
