--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -15,7 +15,7 @@ gem 'bootsnap', require: false
 
 # JS
 gem 'uglifier'<%= gemfile_requirement('uglifier') %>
-gem 'webpacker'
+gem 'webpacker', github: 'rails/webpacker'
 
 gem 'jbuilder'<%= gemfile_requirement('jbuilder') %>
 gem 'redis'<%= gemfile_requirement('redis') %>
